testing responsive site
for iphone 6

--- a/css/aboutpage.css
+++ b/css/aboutpage.css
@@ -35,5 +35,12 @@ body {
 .fa-instagram {
   background: #125688;
   color: white;
-
   </style>
+
+  .wraper{
+    width:100%;
+  }
+
+  .img-banner{
+
+  }
