tried working on banner
Didnt work

--- a/css/aboutpage.css
+++ b/css/aboutpage.css
@@ -3,15 +3,24 @@
   height:100%;
   border-radius: 100%;
 }
-body {
+.body {
+  margin:0
+  padding:0
   font-family: 'Oswald', serif;
+}
+
+.logo{
+    color:#000A0;
+    float:left;
+    padding-left: 25px;
+    
 }
 
 <style>
 .fa {
   padding: 10px;
   font-size: 50px;
-  width: 30px;
+  style= width: 100%;
   text-align: center;
   text-decoration: none;
   margin: 50px 20px;
