--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,113 @@
+  /* Body */
 body {
   color: #28AAE2;
-  font-family: 'Oswald';
+  font-family: 'Oswald', serif;
   margin: 0px;
 }
 
-ul {
-  margin-bottom: 100px;
-  border-radius: 100px;
+
+  /* Navbar */
+.navbar-brand {
+    background-color: #28AAE2;
+    color: #ffffff;
+}
+.navbar {
+  /* Add a black background color to the top navigation */
+    overflow: hidden;
+    border-radius: 0px;
+  }
+
+.navbar-brand :hover{
+  color: #ffffff
+  background-color: #ffffff
+}
+
+  /* Style the links inside the navigation bar */
+  .navbar a {
+    float: center;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  /* Change the color of links on hover */
+  .navbar a:hover {
+    color: ffffff;
+  }
+
+  /* Add a color to the active/current link */
+  .navbar a.active {
+    color: black;
+  }
+
+
+  * {
+    box-sizing: border-box;
+  }
+
+  /* Navbar search button */
+  form.example input[type=text] {
+    padding: 10px;
+    font-size: 17px;
+    border: 1px solid grey;
+    float: left;
+    width: 80%;
+    background: #f1f1f1;
+  }
+
+  form.example button {
+    float: left;
+    width: 20%;
+    padding: 10px;
+    background: #2196F3;
+    color: white;
+    font-size: 17px;
+    border: 1px solid grey;
+    border-left: none;
+    cursor: pointer;
+  }
+
+  form.example button:hover {
+    background: #0b7dda;
+  }
+
+  form.example::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+
+
+  /* Carousel */
+.carousel-inner {
+  max-height: 500px;
+}
+
+.text {
+  color: #f2f2f2;
+  font-size: 30px;
+  position: absolute;
+  width: 100%;
   text-align: center;
+  vertical-align: center;
+  left: auto;
+  top: 50%;
+  transform: translateY(-50%);
+  bottom: initial;
+
+}
+
+
+
+  /* OTHER */
+[id="3"]{
 }
 
 footer {
-  background-color: #f2f2f2;
+  background-color: #28AAE2;
   padding: 20px;
+  color: #ffffff
 }
