--- a/css/aboutpage.css
+++ b/css/aboutpage.css
@@ -3,9 +3,10 @@
   height:100%;
   border-radius: 100%;
 }
-.body {
-  margin:0
-  padding:0
+body {
+  margin: 10px;
+  padding: 10px;
+  color: #28AAE2;
   font-family: 'Oswald', serif;
 }
 
@@ -13,7 +14,7 @@
     color:#000A0;
     float:left;
     padding-left: 25px;
-    
+
 }
 
 <style>
