sorted out dodgy navbar / footer

--- a/css/index.css
+++ b/css/index.css
@@ -106,6 +106,8 @@ body {
 [id="3"]{
 }
 
+
+  /* Footer */
 footer {
   background-color: #28AAE2;
   padding: 20px;
@@ -113,12 +115,10 @@ footer {
 }
 
 .fa {
-  padding: 10px;
   font-size: 50px;
   style= width: 100%;
   text-align: center;
   text-decoration: none;
-  margin: 50px 20px;
   border-radius: 50%;
 }
 
@@ -139,3 +139,4 @@ footer {
 .fa-instagram {
   background: #125688;
   color: white;
+}
