--- a/css/aboutpage.css
+++ b/css/aboutpage.css
@@ -5,7 +5,7 @@
 }
 body {
   margin: 10px;
-  padding: 10px;
+  padding: 20px;
   color: #28AAE2;
   font-family: 'Oswald', serif;
 }
@@ -16,12 +16,10 @@ footer {
   color: #ffffff
 }
 .fa {
-  padding: 10px;
   font-size: 50px;
   style= width: 100%;
   text-align: center;
   text-decoration: none;
-  margin: 50px 20px;
   border-radius: 50%;
 }
 
@@ -32,16 +30,19 @@ footer {
 .fa-facebook {
   background: #3B5998;
   color: white;
+  padding: 15px;
 }
 
 .fa-linkedin {
   background: #007bb5;
   color: white;
+  padding: 15px;
 }
 
 .fa-instagram {
   background: #125688;
   color: white;
+  padding: 15px;
   </style>
 }
 
@@ -120,3 +121,18 @@ footer {
     clear: both;
     display: table;
   }
+
+.about{
+  font-size:10px;
+  color:#000000;
+}
+
+[id="aboutus"]{
+  background: #FFFFFF;
+  color: #28AAE2;
+}
+
+[id="team"]{
+  background: #28AAE2;
+  color: #FFFFFF;
+}
