--- a/css/aboutpage.css
+++ b/css/aboutpage.css
@@ -11,9 +11,9 @@ body {
 }
 
 footer {
-  background-color: #28AAE2;
+  background-color: #ffffff;
   padding: 20px;
-  color: #ffffff
+  color: #28AAE2;
 }
 .fa {
   font-size: 50px;
@@ -50,89 +50,99 @@ footer {
     width: 100%;
 }
 
-.navbar-brand {
+/* Navbar */
+
+.navbar {
+/* Add a black background color to the top navigation */
+  overflow: hidden;
+  border-radius: 0px;
+}
+
+/* Style the links inside the navigation bar */
+.nav a {
+  float: center;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.nav a:hover {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+/* Add a color to the active/current link */
+.nav a.active {
+  color: #28AAE2;
+  background-color: #28AAE2;
+}
+
+.logo {
     background-color: #28AAE2;
     color: #ffffff;
 }
-.navbar {
-  /* Add a black background color to the top navigation */
-    overflow: hidden;
-    border-radius: 0px;
-  }
 
-.navbar-brand :hover{
-  color: #ffffff
-  background-color: #ffffff
+/* Navbar search button */
+* {
+  box-sizing: border-box;
 }
 
-  /* Style the links inside the navigation bar */
-  .navbar a {
-    float: center;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
+form.example input[type=text] {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 80%;
+  background: #f1f1f1;
+}
 
-  /* Change the color of links on hover */
-  .navbar a:hover {
-    color: ffffff;
-  }
+form.example button {
+  float: left;
+  width: 20%;
+  padding: 10px;
+  background: #2196F3;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none;
+  cursor: pointer;
+}
 
-  /* Add a color to the active/current link */
-  .navbar a.active {
-    color: black;
-  }
+form.example button:hover {
+  background: #0b7dda;
+}
 
+form.example::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 
-  * {
-    box-sizing: border-box;
-  }
-
-  /* Navbar search button */
-  form.example input[type=text] {
-    padding: 10px;
-    font-size: 17px;
-    border: 1px solid grey;
-    float: left;
-    width: 80%;
-    background: #f1f1f1;
-  }
-
-  form.example button {
-    float: left;
-    width: 20%;
-    padding: 10px;
-    background: #2196F3;
-    color: white;
-    font-size: 17px;
-    border: 1px solid grey;
-    border-left: none;
-    cursor: pointer;
-  }
-
-  form.example button:hover {
-    background: #0b7dda;
-  }
-
-  form.example::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
+.img-banner{
+  max-height: 500px;
+}
 
 .about{
   font-size:10px;
   color:#000000;
 }
 
-[id="aboutus"]{
-  background: #FFFFFF;
+[id="aboutus"] {
+  background-color: #ffffff;
   color: #28AAE2;
 }
 
-[id="team"]{
-  background: #28AAE2;
-  color: #FFFFFF;
+[id="abouttext"] {
+  background-color: #ffffff;
+  color: #28AAE2;
+  padding: 10px 300px 10px 300px;
+  font-size: 1.17em;
+}
+
+[id="team"] {
+  background-color: #28AAE2;
+  color: #ffffff;
 }
