--- a/css/index.css
+++ b/css/index.css
@@ -34,11 +34,14 @@ body {
     background-color: #28AAE2;
   }
 
-  .logo {
-      background-color: #28AAE2;
-      color: #ffffff;
+  .navbar-brand img {
+    position:absolute;
+    left:0;
+    top:6%;
+    max-width: 100%;
+    height: auto;
+    display: block;
   }
-
   /* Navbar search button */
   * {
     box-sizing: border-box;
