changed text padding to %

--- a/css/aboutpage.css
+++ b/css/aboutpage.css
@@ -142,7 +142,7 @@ footer {
 [id="abouttext"] {
   background-color: #ffffff;
   color: #28AAE2;
-  padding: 10px 200px 10px 200px;
+  padding: 10px 40% 10px 40%;
   font-size: 1em;
   text-align: left|right|center|justify|inital|inherit;
 
